# rivalry-rumble-o-tron

.github/workflows/: ci.yml
hackathon-feb-2026-research-agent/: .env.example  .gitignore  CLAUDE.md  README.md  SESSION.md  pyproject.toml  requirements.txt
hackathon-feb-2026-research-agent/.github/workflows/: ci.yml
hackathon-feb-2026-research-agent/docs/: hackathon-plan.md  post-hackathon-roadmap.md  skills-learned.md
hackathon-feb-2026-research-agent/src/: __init__.py  config.py  errors.py  logging_config.py  main.py
hackathon-feb-2026-research-agent/src/agents/: .claude-skills.md  __init__.py  competitor.py  financial.py  followup.py  manager.py  market_intel.py
hackathon-feb-2026-research-agent/src/prompts/: __init__.py  competitor_prompt.py  financial_prompt.py  followup_prompt.py  manager_prompt.py  market_intel_prompt.py
hackathon-feb-2026-research-agent/src/report/: __init__.py  decision_tree.py  generator.py  templates.py
hackathon-feb-2026-research-agent/src/tools/: .claude-skills.md  __init__.py  market_intel_tools.py  tavily_tools.py  yfinance_tools.py
hackathon-feb-2026-research-agent/src/utils/: retry.py
hackathon-feb-2026-research-agent/tests/: __init__.py  conftest.py  test_agents.py  test_tools.py
hackathon-feb-2026-research-agent/tests/integration/: test_pipeline.py
hackathon-feb-2026-research-agent/tests/unit/: test_competitor_agent.py  test_config.py  test_decision_tree.py  test_errors.py  test_financial_agent.py  test_followup.py  test_manager_agent.py  test_report_generator.py  test_retry.py  test_tavily_tools.py  test_yfinance_tools.py
hackathon-feb-2026-research-agent/ui/: .claude-skills.md  app.py
