[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent-team"
version = "0.1.0"
description = "Multi-agent research system for competitive analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "anthropic>=0.39.0",
    "yfinance>=0.2.40",
    "tavily-python>=0.5.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "structlog>=24.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
research-agent = "src.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "unit: Unit tests (fast, no external calls)",
    "integration: Integration tests (mocked externals)",
    "api: Tests requiring real API keys (excluded from CI)",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/prompts/*.py" = ["E501"]  # Long lines expected in prompt templates

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
